add month and h1

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 
     </head>
     <body>
+        <h1>welcome to new year</h1>
         <ul>year 2022
             <li>january </li>
             <li>febraury</li>
             <li>march</li>
             <li>april</li>
+            <li>may</li>
         </ul>
     </body>
 </html>
