--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
     </head>
     <body>
-        <ul>year 2022
-            <li>january </li>
-            <li>febraury</li>
-            <li>march</li>
-            <li>april</li>
+        <h1 color=red>seasons of the year</h1>
+        <ul>
+            <li><a href="summer.html">summer</a></li>
+            <li>spring</li>
+            <li>autumn</li>
+            <li>winter</li>
         </ul>
     </body>
 </html>
