--- a/summer.html
+++ b/summer.html
@@ -1,6 +1,6 @@
 <html>
     <head><title>Summer</title></head>
     <body>
-        <h1>Welcome Summer</h1>
+        <h1 coler =blue>Welcome Summer</h1>
     </body>
 </html>
