--- a/summer.html
+++ b/summer.html
@@ -2,5 +2,6 @@
     <head><title>Summer</title></head>
     <body>
         <h1 coler =blue>Welcome Summer</h1>
+          after merge
     </body>
 </html>
