add new fetch branch

--- a/index.html
+++ b/index.html
@@ -4,12 +4,25 @@
     </head>
     <body>
 
+        <h1>hello from NewYear1</h1>
+
+        <h1>welcome to the new year</h1>
+        
+        <ul>year 2022
+            <li>january </li>
+            <li>febraury</li>
+            <li>march</li>
+            <li>april</li>
+        </ul>
+  
+
         <h1 color=red>seasons of the year</h1>
         <ul>
             <li><a href="summer.html">summer</a></li>
             <li>spring</li>
             <li>autumn</li>
             <li>winter</li>
+
         </ul>
         <h2>welcome to new year</h2>
         <ul>year 2022
