--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <li><a href="summer.html">summer</a></li>
             <li>spring</li>
             <li>autumn</li>
-            <li>winter</li>
+            <li href="winter.html">winter</li>
 
         </ul>
     </body>
