--- a/winter.html
+++ b/winter.html
@@ -1,7 +1,7 @@
 <html>
-    <head><title>Summer</title></head>
+    <head><title>winter</title></head>
     <body>
-        <h1 coler =blue>Welcome Summer</h1>
-          after merge
+        <h1 coler =blue>Welcome winter</h1>
+          
     </body>
 </html>
