Revert "edit winter"
This reverts commit 182a55ac09d21c4959ec166d867a842996c1fe4d.

--- a/winter.html
+++ b/winter.html
@@ -1,7 +1,7 @@
 <html>
-    <head><title>winter</title></head>
+    <head><title>Summer</title></head>
     <body>
-        <h1 coler =blue>Welcome winter</h1>
-          
+        <h1 coler =blue>Welcome Summer</h1>
+          after merge
     </body>
 </html>
